force-app/main/default/objects/ProductMaster__c/ProductMaster__c.object-meta.xml
<CustomObject>
    <label>商品マスタ</label>
    <nameField>
        <label>商品名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>