force-app/main/default/objects/ProductMaster__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>荷主</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>商品マスタ</relationshipLabel>
    <relationshipName>ProductMasterList</relationshipName>
    <type>Lookup</type>
</CustomField>