force-app/main/default/objects/ProductMaster__c/fields/AccountCode_F__c.field-meta.xml
<CustomField>
    <fullName>AccountCode_F__c</fullName>
    <formula>Account__r.AccountCode__c</formula>
    <label>取引先コード</label>
    <type>Text</type>
</CustomField>