force-app/main/default/objects/ProductMaster__c/fields/AccumulatedDecimalHandlingCargo__c.field-meta.xml
<CustomField>
    <fullName>AccumulatedDecimalHandlingCargo__c</fullName>
    <label>積数端数　荷役</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1：積数換算時</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>