force-app/main/default/objects/ProductMaster__c/fields/AccumulatedDecimalProcessDigitNumber__c.field-meta.xml
<CustomField>
    <fullName>AccumulatedDecimalProcessDigitNumber__c</fullName>
    <label>積数端数　処理桁数</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <default>true</default>
                <label>0：端数無し</label>
            </value>
            <value>
                <fullName>１</fullName>
                <label>１：</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>