force-app/main/default/objects/ProductMaster__c/fields/AccumulatedDecimalProcessType__c.field-meta.xml
<CustomField>
    <fullName>AccumulatedDecimalProcessType__c</fullName>
    <label>積数端数　処理区分</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <default>true</default>
                <label>0：四捨五入</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>