force-app/main/default/objects/ProductMaster__c/fields/AccumulatedDecimalStorage__c.field-meta.xml
<CustomField>
    <fullName>AccumulatedDecimalStorage__c</fullName>
    <label>積数端数　保管</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1：積数換算時</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>