force-app/main/default/objects/ProductMaster__c/fields/AllocableQuantity_Sum__c.field-meta.xml
<CustomField>
    <fullName>AllocableQuantity_Sum__c</fullName>
    <label>引き当て可能数</label>
    <summarizedField>ProductStockInfo__c.AllocableQuantity_F__c</summarizedField>
    <summaryForeignKey>ProductStockInfo__c.ProductMaster__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>