force-app/main/default/objects/ProductMaster__c/fields/ArrivalAmountCalculationCategory__c.field-meta.xml
<CustomField>
    <fullName>ArrivalAmountCalculationCategory__c</fullName>
    <label>入庫金額計区</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AmountCalculationCategory</valueSetName>
    </valueSet>
</CustomField>