force-app/main/default/objects/ProductMaster__c/fields/CaseItemQuantity__c.field-meta.xml
<CustomField>
    <fullName>CaseItemQuantity__c</fullName>
    <label>ケースの入数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>