force-app/main/default/objects/ProductMaster__c/fields/CaseKg__c.field-meta.xml
<CustomField>
    <fullName>CaseKg__c</fullName>
    <label>ケースの重量（Kg）</label>
    <precision>17</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>