force-app/main/default/objects/ProductMaster__c/fields/Grade__c.field-meta.xml
<CustomField>
    <fullName>Grade__c</fullName>
    <label>等級</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>C</fullName>
                <default>true</default>
                <label>C</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>