force-app/main/default/objects/ProductMaster__c/fields/Group__c.field-meta.xml
<CustomField>
    <fullName>Group__c</fullName>
    <label>グループ</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>GP1XXXXXX1</fullName>
                <default>true</default>
                <label>GP1XXXXXX1：グループ1----1----X</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>