force-app/main/default/objects/ProductMaster__c/fields/LotCalculationSelection__c.field-meta.xml
<CustomField>
    <fullName>LotCalculationSelection__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ロット計算選択</label>
    <type>Checkbox</type>
</CustomField>