force-app/main/default/objects/ProductMaster__c/fields/PalletLoadsNumber__c.field-meta.xml
<CustomField>
    <fullName>PalletLoadsNumber__c</fullName>
    <label>パレット積み付け数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>