force-app/main/default/objects/ProductMaster__c/fields/ProductCode__c.field-meta.xml
<CustomField>
    <fullName>ProductCode__c</fullName>
    <label>商品コード</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>