force-app/main/default/objects/ProductMaster__c/fields/ProductManagementCategory__c.field-meta.xml
<CustomField>
    <fullName>ProductManagementCategory__c</fullName>
    <label>商品管理区分</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>4</fullName>
                <default>true</default>
                <label>4：ケース・バラ管理（荷崩し自動）</label>
            </value>
            <value>
                <fullName>1</fullName>
                <isActive>false</isActive>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
                <isActive>false</isActive>
                <label>2</label>
            </value>
            <value>
                <fullName>3</fullName>
                <isActive>false</isActive>
                <label>3</label>
            </value>
            <value>
                <fullName>5</fullName>
                <isActive>false</isActive>
                <label>5</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>