force-app/main/default/objects/ProductMaster__c/fields/ProductStockQuantity__c.field-meta.xml
<CustomField>
    <fullName>ProductStockQuantity__c</fullName>
    <label>削除_在庫数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>