force-app/main/default/objects/ProductMaster__c/fields/QuantityUsageCategory__c.field-meta.xml
<CustomField>
    <fullName>QuantityUsageCategory__c</fullName>
    <label>数量使用区分</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1：数量1まで</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>2：数量2まで</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>3：数量3まで</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>