force-app/main/default/objects/ProductMaster__c/fields/StockAmountCalculationCategory__c.field-meta.xml
<CustomField>
    <fullName>StockAmountCalculationCategory__c</fullName>
    <label>在庫金額計区</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AmountCalculationCategory</valueSetName>
    </valueSet>
</CustomField>