force-app/main/default/objects/ProductMaster__c/fields/StockQuantity_Sum__c.field-meta.xml
<CustomField>
    <fullName>StockQuantity_Sum__c</fullName>
    <label>在庫数</label>
    <summarizedField>ProductStockInfo__c.StockQuantity_F__c</summarizedField>
    <summaryForeignKey>ProductStockInfo__c.ProductMaster__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>