force-app/main/default/objects/ProductMaster__c/fields/StorageFee__c.field-meta.xml
<CustomField>
    <fullName>StorageFee__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>保管料</label>
    <referenceTo>StorageFee__c</referenceTo>
    <relationshipLabel>商品マスタ</relationshipLabel>
    <relationshipName>ProductMasterList</relationshipName>
    <type>Lookup</type>
</CustomField>