force-app/main/default/objects/ProductMaster__c/fields/TaxType__c.field-meta.xml
<CustomField>
    <fullName>TaxType__c</fullName>
    <label>課税区分</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1：課税</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>2：</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>