force-app/main/default/objects/ProductMaster__c/fields/TermCategory_F__c.field-meta.xml
<CustomField>
    <fullName>TermCategory_F__c</fullName>
    <formula>CASE(Account__r.TermCategory__c
  , &quot;2terms&quot;, &quot;２期制&quot;
  , &quot;3terms&quot;, &quot;３期制&quot;
  , Text(Account__r.TermCategory__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>期制区分</label>
    <type>Text</type>
</CustomField>