force-app/main/default/objects/ProductMaster__c/fields/UnitPriceArrival_F__c.field-meta.xml
<CustomField>
    <fullName>UnitPriceArrival_F__c</fullName>
    <formula>StorageFee__r.UnitPriceArrival__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>単価 入庫</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>