force-app/main/default/objects/ProductMaster__c/fields/UnitPriceShipping_F__c.field-meta.xml
<CustomField>
    <fullName>UnitPriceShipping_F__c</fullName>
    <formula>StorageFee__r.UnitPriceShipping__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>単価 出庫</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>