force-app/main/default/objects/ProductMaster__c/fields/UnitPriceStorage_F__c.field-meta.xml
<CustomField>
    <fullName>UnitPriceStorage_F__c</fullName>
    <formula>StorageFee__r.UnitPriceStorage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>単価 保管</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>