force-app/main/default/objects/ProductMaster__c/fields/VolumeCalculationCategory__c.field-meta.xml
<CustomField>
    <fullName>VolumeCalculationCategory__c</fullName>
    <label>容積計算区分</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>8</fullName>
                <default>true</default>
                <label>8：ケース容積+ボール容積+バラ容積</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>