force-app/main/default/objects/ProductMaster__c/fields/WarehouseMaster__c.field-meta.xml
<CustomField>
    <fullName>WarehouseMaster__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>値設定した場合、倉庫保管対象と見なす</description>
    <label>倉庫</label>
    <referenceTo>WarehouseMaster__c</referenceTo>
    <relationshipLabel>商品マスタ</relationshipLabel>
    <relationshipName>ProductMasterList</relationshipName>
    <type>Lookup</type>
</CustomField>