force-app/main/default/objects/ProductMaster__c/fields/WeightCalculationCategory__c.field-meta.xml
<CustomField>
    <fullName>WeightCalculationCategory__c</fullName>
    <label>重量計算区分</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>8</fullName>
                <default>true</default>
                <label>8：ケース重量+ボール重量+バラ重量</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>