force-app/main/default/objects/ProductMaster__c/validationRules/AllocationPriorityAccount.validationRule-meta.xml
<ValidationRule>
    <fullName>AllocationPriorityAccount</fullName>
    <active>true</active>
    <description>商品マスタ登録の場合、荷主の「引き当て順位」、「期制区分」は必須です。</description>
    <errorConditionFormula>/* 判定条件 */
ISNEW()
&amp;&amp;
/* 判定項目 */
( ISBLANK( TEXT( Account__r.AllocationPriority__c ) )
||
ISBLANK( TEXT(  Account__r.TermCategory__c  ) ) )</errorConditionFormula>
    <errorDisplayField>Account__c</errorDisplayField>
    <errorMessage>荷主の「引き当て順位」、「期制区分」を入力してください。</errorMessage>
</ValidationRule>